--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Developpement NodeJS et Python" />
+    <meta name="robots" content="all" />
     <meta
       name="description"
       content="Baptiste Zorzi's personal Website"
